# video_pub

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/video_pub/: video_loader.hpp
src/: video_loader.cpp  video_node.cpp
